--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 --------------------------------------------------------------------------
-REFERENCE:
+**REFERENCE:**
 
 This repository includes all the analysis scripts related with the scientific article:
 In-vivo estimation of axonal morphology from MRI and EEG data
@@ -18,7 +18,7 @@ The microscopic morphologic features of white matter we estimate are:
     •  the g-ratio dependence on the radius, g(r)
 
 --------------------------------------------------------------------------
-AUTHORS:
+**AUTHORS:**
 
 Author: Rita Oliveira, PhD student
 Co-supervisor: Marzia De Lucia
@@ -34,7 +34,7 @@ Email: rita.oliveira.uni@gmail.com
 Last updated: January 2021
 
 --------------------------------------------------------------------------
-CONTENT:
+**CONTENT:**
 
 This package includes:
     •  The analysis codes used to process the EEG data
@@ -42,7 +42,7 @@ This package includes:
     in-vivo microstructural features of white matter tracts
 
 --------------------------------------------------------------------------
-DEPENDENCIES (not provided here):
+**DEPENDENCIES (not provided here):**
 
 • eeglab13_4_4b (https://sccn.ucsd.edu/eeglab/download.php)
 • fieldtrip-20191206 (https://www.fieldtriptoolbox.org/download/)
@@ -56,7 +56,7 @@ DEPENDENCIES (not provided here):
 These analysis scripts were run under MATLAB 2021a
 
 --------------------------------------------------------------------------
-INPUT DATA:
+**INPUT DATA:**
 
 The initial data necessary to be able to run this analysis includes:
     •  The raw data EEG (in the format block_X.TRC; and metrics obtained 
@@ -93,9 +93,9 @@ The majority of the folders are created along the scripts, with exception
 of the folders containing the data mentioned in the previous section.
 
 --------------------------------------------------------------------------
-DESCRIPTION OF THE MAIN ANALYSIS STEPS:
+**DESCRIPTION OF THE MAIN ANALYSIS STEPS:**
 
-    •  SET PATHS 
+	•  SET PATHS 
 		Creates the path structure used in all the other scripts. 
 		User needs to edit this script and change the path variables 
 		to match the ones on the user's local computer.
@@ -108,7 +108,7 @@ DESCRIPTION OF THE MAIN ANALYSIS STEPS:
 		statistical cluster permutation analysis.
 		User needs to edit this script and change the parameters 
 		to the desired ones.
-		
+
 		> To replicate the results of the associated scientific article,
 		given that the IHTT concerned only the 'Left' visual stimulation, 
 		cond_list is {'Left'} (set by default).
@@ -190,7 +190,7 @@ DESCRIPTION OF THE MAIN ANALYSIS STEPS:
 		estimated in the previous step (EEG - IHTT ESTIMATION).		  
 
 --------------------------------------------------------------------------
-HOW TO USE:
+**HOW TO USE:**
 
 Important: the analysis scripts need to be run from the 'main' scripts folder.
 
@@ -211,8 +211,9 @@ The biophysical model of microstructure can finally be run with:
     MODEL()                          - requires output files from EEG_Step4_IHTT 
 
 --------------------------------------------------------------------------
+**NOTE:**
 
-Note: the data used in the original publication is publicly available.	
+The data used in the original publication is publicly available.	
 The analysis steps EEG - IHTT ESTIMATION and 
 BIOPHYSICAL MODEL OF MICROSTRUCTURE can be run on the provided data.
 
